@@ -1,3 +1,9 @@
+2003-02-01  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* tests/tclblend/loading.test: Rework a couple
+	of tests to make errors showing up under JDK 1.4
+	more clear. Remove core file if there is one.
+
 2003-01-31  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* src/jacl/tcl/lang/FormatCmd.java (cmdProc, cvtStrToStr):
